feat: upload to s3 (#23)
* feat: upload to s3

* chore: fix atlas db url

* chore: fix atlas get env

* chore: add test

* chore: clean test

* chore: clean test

* chore: add test
