# internal/gateway/domain/response/storage_response.go
@@ -1,0 +1,6 @@
+package response
+
+type UploadFileResponse struct {
+	FileID   string `json:"file_id"`
+	FileName string `json:"file_name"`
+}
